deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-rental
  labels:
    app: vsp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vsp
  template:
    metadata:
      labels:
        app: vsp
    spec:
      containers:
      - name: mycont11
        image: sivav2516/car-rental:latest
        ports:
        - containerPort: 80
