helloworld.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    app: mypod
spec:
  containers:
  - name: podcont
    image: sivav2516/task1image:latest
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myserve
spec:
  selector:
    app: mypod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31233
  type: NodePort
