service.yml
apiVersion: v1
kind: Service
metadata:
  name: myservice11
spec:
  selector:
    app: vsp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
