suryatravel.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy12
  labels:
    app: vsp1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vsp1
  template:
    metadata:
      labels:
        app: vsp1
    spec:
      containers:
        - name: mycont12
          image: surya8442/autoassist:latest
          ports:
            - containerPort: 1337

---
apiVersion: v1
kind: Service
metadata:
  name: myservice12
spec:
  selector:
    app: vsp12
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1337
  type: ClusterIP
